[gd_scene load_steps=3 format=3 uid="uid://hgb21nwch34j"]

[ext_resource type="PackedScene" uid="uid://bn1sfd1m0cre4" path="res://scenes/ui/cutscene_message_area.tscn" id="1_b8py4"]
[ext_resource type="Script" path="res://scripts/ui/cutscene_ui.gd" id="1_pe67g"]

[node name="CutsceneUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pe67g")

[node name="LeftImage" type="Sprite2D" parent="."]
position = Vector2(400, 275)

[node name="RightImage" type="Sprite2D" parent="."]
position = Vector2(1200, 275)

[node name="CutsceneMessageArea" parent="." instance=ExtResource("1_b8py4")]
offset_top = 550.0
offset_bottom = 550.0

[connection signal="get_new_message" from="CutsceneMessageArea" to="." method="_on_cutscene_message_area_get_new_message"]
